kafka-deployment/kafka-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafka-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: kafka.programing
      http:
        paths:
          - path: /kafka/(.*)
            pathType: Prefix
            backend:
              service:
                name: kafka-service
                port:
                  number: 9092
